--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="title_activity_details_speaker">Details speaker</string>
+    <string name="title_activity_details_partner">Details partner</string>
     <string name="upcoming_talks">Upcoming talks</string>
     <string name="latest_news">Latest news</string>
     <string name="title_conference">29th Conference of the International Association of University Pedagogy</string>
